use single line arrays

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,11 @@
 
 # Build
 build/
+dist/
 *.bat
 
-src/auxiliar
-src/m1.txt
-src/m2.txt
-src/sequencial
-src/sequencial.txt
-src/threads
-src/threads.txt
+m1.txt
+m2.txt
+sequencial.txt
+threads.txt
+
